# spyc

./: .gitignore  CONTRIBUTING.md  README.md  example_notebook.ipynb  pyproject.toml  requirements - dev.txt  requirements.txt
.github/workflows/: pypi-publish.yml
.ipynb_checkpoints/: example_notebook-checkpoint.ipynb
spyc/: __init__.py  control_rules.py  core.py  helpers.py  plotly_chart.py  process_functions.py  seasonal_formatting.py  spc_charts.py  spc_constants.py  spc_functions.py  spc_plots.py
tests/: test_control_rules.py  test_core.py  test_helpers.py  test_process_functions.py
